# TradeR

./: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  Configurations.ini  DailyStats.csv  Database.cpp  Database.h  DateTime.cpp  DateTime.h  README.md  SharpeRatioYearly.txt  Simulator.cpp  Simulator.h  TickerBlock.cpp  TickerBlock.h  TradingModel.cpp  TradingModel.h  TradingObject.cpp  TradingObject.h  TradingSummary.txt  Utilities.cpp  Utilities.h  log.txt  main.cpp
